--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -15,7 +15,16 @@
 				<p id="slogan">Really Rally!?</p>
 		</header>
 
-		<nav>Lorem ipsum dolor sit amet, reque diceret eos ad, te iisque accusam legendos eam, menandri gloriatur vituperata est no. 
+		<nav>
+			<h3>
+					<ul>
+						<a href="https://www.instagram.com/rallythebullterrier/" target="_blank">Instagram</a> &middot;
+						<a href="https://www.facebook.com/rallythebullterrier/" target="_blank">Facebook</a> &middot;
+						<a href="https://twitter.com/RallytheEBT" target="_blank">Twitter</a> &middot;
+						<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank">YouTube</a> &middot;
+						<a href="https://rallythebullterrier.wordpress.com/" target="_blank">Blog</a>
+					</ul>
+				</h3>
 		</nav>
 
 		<section id="one"> 
@@ -26,16 +35,7 @@
 
 			</article>
 
-			<aside class="picture">
-				<h3>
-					<ul>
-						<a href="https://www.instagram.com/rallythebullterrier/" target="_blank">Instagram</a> &middot;
-						<a href="https://www.facebook.com/rallythebullterrier/" target="_blank">Facebook</a> &middot;
-						<a href="https://twitter.com/RallytheEBT" target="_blank">Twitter</a> &middot;
-						<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank">YouTube</a> &middot;
-						<a href="https://rallythebullterrier.wordpress.com/" target="_blank">Blog</a>
-					</ul>
-				</h3>
+			<aside class="picture">	Lorem ipsum dolor sit amet, reque diceret eos ad, te iisque accusam legendos eam, menandri gloriatur vituperata est no. 
 			</aside>
 
 		</section>
