--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,8 +6,7 @@
 	</head>
 
 	<body>
-		<h1>Rally the Bull Terrier</h1>
-
+			<h1>Rally the Bull Terrier</h1>
 			<p>Follow the misadventures of Rally the Bull Terrier on her social media accounts listed below.</p>
 		<div class="clearfix" id="figure-wrap">	
 			<figure>
@@ -44,10 +43,16 @@
 				</figcaption>
 				<img src="images/Rally1.jpg" alt= "Close up of a Bull Terrier face" height="300" width="300">
 			</figure>	
+
+			<figure>
+				<figcaption>
+					<a href="#" target="_blank">About</a> 
+				</figcaption>
+				<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window" height="300" width="300">
+			</figure>
 		</div>
 			
 		<footer>
-			<a href="#">About</a>
 			<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
 			<p>&copy;2016 Rally The Bull Terrier</p>	
 		</footer>
