--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,8 +6,10 @@
 	</head>
 
 	<body>
-			<h1>Rally the Bull Terrier</h1>
-			<p>Follow the misadventures of Rally the Bull Terrier on her social media accounts listed below.</p>
+		<section id="two_column" class="clearfix">
+			<h1 id="left">Rally the Bull Terrier</h1>
+			<p id="right">Follow the misadventures of Rally the Bull Terrier on her social media accounts listed below.</p>
+		</section>			
 		<div class="clearfix" id="figure-wrap">	
 			<figure>
 				<figcaption>
@@ -48,8 +50,9 @@
 				<figcaption>
 					<a href="#" target="_blank">About</a> 
 				</figcaption>
-				<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window" height="300" width="300">
+				<img src="images/Rally7.jpg" alt= "Bull Terrier looking up, sitting on American Flag towel" height="300" width="300">
 			</figure>
+
 		</div>
 			
 		<footer>
@@ -58,4 +61,5 @@
 		</footer>
 			
 	</body>
+
 </html>
