--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<div class"page-wrap">
 			<section id="two_column" class="clearfix">
-				<h1>Rally the Bull Terrier</h1>
-				<p>Follow the misadventures of Rally the Bull Terrier on her social media accounts listed below.</p>
+				<h1>Follow the misadventures of </h1>
+				<h2>Rally the Bull Terrier</h2>
 			</section>			
 			<main class="clearfix" id="figure-wrap">	
 				<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">
@@ -61,7 +61,7 @@
 			
 			<footer>
 				<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
-				<p>&copy;2016 Rally The Bull Terrier</p>	
+				<p>&copy;2016  Rally the Bull Terrier</p>	
 			</footer>
 
 		</div>		
