--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -11,7 +11,7 @@
 			<section id="two_column" class="clearfix">
 				<h1>Follow the misadventures of </h1>
 				<h2>Rally the Bull Terrier</h2>
-			</section>			
+			</section>
 			<main class="clearfix" id="figure-wrap">	
 				<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">
 					<figure>
@@ -52,13 +52,11 @@
 				<a href="#" target="_blank" class="imgContainer">
 					<figure>
 						<figcaption>About</figcaption>
-					<div class="crop">
-						<img src="images/Rally7.jpg" alt= "Bull Terrier looking up, sitting on American Flag towel">
+						<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window">
 					</div>
 					</figure>
 				</a>
-			</main>
-			
+			</main>		
 			<footer>
 				<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
 				<p>&copy;2016  Rally the Bull Terrier</p>	
