--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -7,62 +7,65 @@
 	</head>
 
 	<body>
-		<div class"page-wrap">
-			<section id="two_column" class="clearfix">
+		<div id="head-wrap">
+			<section class="wrap clearfix">
 				<h1>Follow the misadventures of </h1>
 				<h2>Rally the Bull Terrier</h2>
 			</section>
+		</div>
+		<div id="body-wrap">
 			<main class="clearfix" id="figure-wrap">	
-				<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>Instagram </figcaption>
-						<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window">
-					</figure>
-				</a>
+					<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>Instagram </figcaption>
+							<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window">
+						</figure>
+					</a>
 
-				<a href="https://www.facebook.com/rallythebullterrier/" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>Facebook</figcaption>
-						<img src="images/Rally3.jpg" alt= "Bull Terrier standing next to a dirt bike">
-					</figure>
-				</a>
+					<a href="https://www.facebook.com/rallythebullterrier/" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>Facebook</figcaption>
+							<img src="images/Rally3.jpg" alt= "Bull Terrier standing next to a dirt bike">
+						</figure>
+					</a>
 
-				<a href="https://twitter.com/RallytheEBT" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>Twitter</figcaption>
-						<img src="images/Rally4.jpg" alt= "Bull Terrier sitting in front of graffiti building">
-					</figure>
-				</a>
+					<a href="https://twitter.com/RallytheEBT" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>Twitter</figcaption>
+							<img src="images/Rally4.jpg" alt= "Bull Terrier sitting in front of graffiti building">
+						</figure>
+					</a>
 
-				<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>YouTube</figcaption>
-						<img src="images/Rally6.jpg" alt= "Bull Terrier looking down empty path">
-					</figure>
-				</a>
+					<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>YouTube</figcaption>
+							<img src="images/Rally6.jpg" alt= "Bull Terrier looking down empty path">
+						</figure>
+					</a>
 
-				<a href="https://rallythebullterrier.wordpress.com/" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>Blog</figcaption>
-						<img src="images/Rally1.jpg" alt= "Close up of a Bull Terrier face">
-					</figure>
-				</a>
-		
+					<a href="https://rallythebullterrier.wordpress.com/" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>Blog</figcaption>
+							<img src="images/Rally1.jpg" alt= "Close up of a Bull Terrier face">
+						</figure>
+					</a>
+			
 
-				<a href="#" target="_blank" class="imgContainer">
-					<figure>
-						<figcaption>About</figcaption>
-						<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window">
-					</div>
-					</figure>
-				</a>
-			</main>		
-			<footer>
-				<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
-				<p>&copy;2016  Rally the Bull Terrier</p>	
-			</footer>
-
-		</div>		
+					<a href="#" target="_blank" class="imgContainer">
+						<figure>
+							<figcaption>About</figcaption>
+							<img src="images/Rally5.jpg" alt= "Bull Terrier looking out a window">
+						</div>
+						</figure>
+					</a>
+				</main>	
+			</div>	
+			<div id="foot-wrap">
+				<footer>
+					<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
+					<p>&copy;2016 Rally the Bull Terrier</p>	
+				</footer>
+			</div>		
 	</body>
 
 </html>
