--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -51,7 +51,7 @@
 					</a>
 			
 
-					<a href="#" target="_blank" class="imgContainer">
+					<a href="#" class="imgContainer">
 						<figure>
 							<figcaption>About</figcaption>
 							<img src="images/Rally8.jpg" alt= "Rally the Bull Terrier sitting in the front seat of a car and looking to the back seat">
