--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -9,63 +9,57 @@
 	<body>
 		<div id="head-wrap">
 			<section class="wrap clearfix">
-				<h1>Follow the misadventures of </h1>
+				<h1>Follow the misadventures of </h1> 
 				<h2>Rally the Bull Terrier</h2>
 			</section>
 		</div>
 		<div id="body-wrap">
-			<main class="clearfix" id="figure-wrap">	
-					<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">
-						<figure>
-							<figcaption>Instagram </figcaption>
-							<img src="images/Rally5.jpg" alt= "Rally the Bull Terrier looking out a window">
-						</figure>
-					</a>
-
-					<a href="https://www.facebook.com/rallythebullterrier/" target="_blank" class="imgContainer">
-						<figure>
-							<figcaption>Facebook</figcaption>
+			<main class="clearfix" id="figure-wrap">
+				<a href="https://www.instagram.com/rallythebullterrier/" target="_blank" class="imgContainer">	
+					<figure class="col1">
+						<figcaption>Instagram </figcaption>
+						<img src="images/Rally5.jpg" alt= "Rally the Bull Terrier looking out a window">
+					</figure>
+				</a>
+				<a href="https://www.facebook.com/rallythebullterrier/" target="_blank" class="imgContainer">
+					<figure class="col2">
+						<figcaption>Facebook</figcaption>
 							<img src="images/Rally3.jpg" alt= "Rally the Bull Terrier standing next to a dirt bike">
-						</figure>
-					</a>
-
-					<a href="https://twitter.com/RallytheEBT" target="_blank" class="imgContainer">
-						<figure>
-							<figcaption>Twitter</figcaption>
+					</figure>
+				</a>
+				<a href="https://twitter.com/RallytheEBT" target="_blank" class="imgContainer">			<figure class="col3">
+						<figcaption>Twitter</figcaption>
 							<img src="images/Rally4.jpg" alt= "Rally the Bull Terrier sitting in front of graffiti building">
-						</figure>
-					</a>
-
-					<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank" class="imgContainer">
-						<figure>
-							<figcaption>YouTube</figcaption>
+					</figure>
+				</a>
+				<a href="https://www.youtube.com/channel/UCRXPHDWjdBbc1EAdq3-k8JA" target="_blank" class="imgContainer">	
+					<figure class="col3">
+						<figcaption>YouTube</figcaption>
 							<img src="images/Rally6.jpg" alt= "Rally the Bull Terrier looking down empty path">
-						</figure>
-					</a>
-
-					<a href="https://rallythebullterrier.wordpress.com/" target="_blank" class="imgContainer">
-						<figure>
+					</figure>
+				</a>
+				<a href="https://rallythebullterrier.wordpress.com/" target="_blank" class="imgContainer">
+					<figure class="col2">
 							<figcaption>Blog</figcaption>
 							<img src="images/Rally1.jpg" alt= "Close up of Rally the Bull Terrier's face">
-						</figure>
-					</a>
-			
-
-					<a href="#" class="imgContainer">
-						<figure>
+					</figure>		
+				</a>			
+				<a href="#" class="imgContainer">
+					<figure class="col1">
 							<figcaption>About</figcaption>
 							<img src="images/Rally8.jpg" alt= "Rally the Bull Terrier sitting in the front seat of a car and looking to the back seat">
-						</div>
-						</figure>
-					</a>
-				</main>	
-			</div>	
-			<div id="foot-wrap">
-				<footer>
+					</figure>
+				</a>		
+			</main>	
+		</div>	
+
+		<div id="foot-wrap">
+			 <footer>
 					<a href="mailto:rallythebullterrier@gmail.com">Contact</a>
-					<p>&copy;2016 Rally the Bull Terrier</p>	
-				</footer>
-			</div>		
+						<p>&copy;2016 Rally the Bull Terrier</p>	
+			</footer>
+		</div>	
+
 	</body>
 
 </html>
